tests/lean/macro1.lean.expected.out
(node lambda_core (node bind [(ident x)] (ident x:0)))
macro1.lean:45:0: error: unknown identifier y
state:
⊢ true
(node lambda_core (node bind [(ident x)] (node lambda_core (node bind [(ident x!1)] (ident x:1)))))
(node lambda_core (node bind [(ident x.y)] (ident x.y.z:0.(z))))
